<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco">

    <TextView
        android:id="@+id/txtHoraEvento2"
        android:layout_width="76dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtCategoria"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreUsuario" />

    <EditText
        android:id="@+id/txtNombreEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/txtNombreEvento"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <EditText
        android:id="@+id/txtNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/txtNombreUsuario"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/spinner_cat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreEvento" />

    <Spinner
        style="@android:style/Widget.Holo.Light.Spinner"
        android:id="@+id/spinner_cat"
        android:layout_width="208dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:visibility="visible"
        app:layout_constraintCircleRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtHoraEvento2"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreUsuario" />

    <Button
        android:id="@+id/btn_crear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:background="@drawable/boton_pulsado"
        android:text="@string/crear_btn"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtHoraDesde"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txtHoraDesde"
        android:inputType="time"
        app:layout_constraintEnd_toStartOf="@+id/txtHoraHasta"
        app:layout_constraintStart_toEndOf="@+id/txtHoraEvento"
        app:layout_constraintTop_toBottomOf="@+id/spinner_cat" />

    <EditText
        android:id="@+id/txtHoraHasta"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/txtHoraHasta"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_cat" />

    <TextView
        android:id="@+id/txtHoraEvento"
        android:layout_width="76dp"
        android:layout_height="21dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/txtHoraEvento"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHoraEvento2" />

</android.support.constraint.ConstraintLayout>