<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco">

    <TextView
        android:id="@+id/txtTituloEvC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@color/letraGrande"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloEventoC" />

    <TextView
        android:id="@+id/txtNombreCreadorC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@color/letraGrande"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreUserC" />

    <TextView
        android:id="@+id/txtCategoriaC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="@color/letraGrande"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHoraEvento3C" />

    <TextView
        android:id="@+id/txtHraInicioC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/letraGrande"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHoraEventoC" />

    <TextView
        android:id="@+id/txtHraFinC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textAlignment="center"
        android:textColor="@color/letraGrande"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/txtSeparadorC"
        app:layout_constraintTop_toBottomOf="@+id/txtHoraEventoC" />

    <TextView
        android:id="@+id/txtHoraEventoC"
        android:layout_width="76dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtHoraEvento"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCategoriaC" />

    <TextView
        android:id="@+id/txtHoraEvento3C"
        android:layout_width="76dp"
        android:layout_height="22dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtCategoria"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtCategoriaC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombreCreadorC" />

    <TextView
        android:id="@+id/txtTituloEventoC"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtNombreEvento2"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtTituloEvC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtNombreUserC"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtNombreUsuario1"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtNombreCreadorC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTituloEvC" />

    <TextView
        android:id="@+id/txtSeparadorC"
        android:layout_width="24dp"
        android:layout_height="25dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtSeparadorHra"
        android:textAlignment="center"
        android:textColor="@color/letraGrande"
        android:textSize="18sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txtHraFinC"
        app:layout_constraintStart_toEndOf="@+id/txtHraInicioC"
        app:layout_constraintTop_toBottomOf="@+id/txtHoraEventoC" />

    <Button
        android:id="@+id/btn_participantes"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:background="@drawable/boton_pulsado"
        android:text="@string/btn_participantes"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_editarEvento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_borrarEvento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:background="@drawable/boton_pulsado"
        android:text="@string/btn_borrar"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_editarEvento" />

    <Button
        android:id="@+id/btn_editarEvento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:background="@drawable/boton_pulsado"
        android:text="@string/btn_editar"
        android:textColor="@color/blanco"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_borrarEvento"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>